Fixed Sizing issues when on mobile Minor appearance tweaks

--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,13 @@
     font-weight: bold;
     color: #2c2c50;
     font-size: 20px;
+    padding-bottom: 10px;
 }
 .HeaderLogo img{
     max-width: 100px;
     display: flex;
     flex-wrap: wrap;
+    padding-right: 10px;
 }
 .navbar ul{
     display: flex;
@@ -87,11 +89,13 @@
    display: flex;
    flex-direction: column;
    align-items: flex-end;
+   margin-left: -110px;
 }
 .imgplaceholder img{
     height: 250px;
     width: 80%;
     border-radius: 10px 10px;
+    margin-top: 10px;
 }
 .m1{
     padding-bottom: 100px;
@@ -156,6 +160,7 @@ figcaption{
 .m4 p {
     color: #c2c3c6;
     font-size: 18px;
+    padding-right: 20px;
 }
 .m4 .top{
     color: #f9faf8;
